# Stellar-OjaBridge

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml
backend/: Cargo.toml
backend/src/: main.rs
backend/src/models/: transaction.rs
backend/src/payouts/: mock_provider.rs  mod.rs  provider.rs
backend/src/routes/: mod.rs  sep24.rs
backend/src/services/: mod.rs  stellar.rs
frontend/: package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: BankDetailsForm.tsx
migrations/: 001_initial_schema.sql
